plang/testing/logs/false-incorrect/18/program18.p.p
tanvD CAC (MJWF) :- aDBa (FzIO) (SQaHO).
uc0 O56d.
dObIV Xi9 vOw (SkGxJ) KZRF2.


d3fkR F (z (Y) (K9fo) C0bS (lUe8U K2 (oeL7 (C) r))) vPtAt jKY.


otcKt a8.
p.


p4EV (x aMcef) i0iEU (kgM (AiJ) (gvAT (Wk)) (h iWbJ SGYH (Pqgt)) (pCK)).
lMR mE.
r8 (R7Bou) G (jCG4 (GYXMe) J) :- co (a1F (Y2IW)), (cAj a12Ed uylHe gqX), u (df2nN) (N0x) (QM4vD), nA xCo (iX ZB jU); hQL4k (R8kY) (Z); nG4wG, lyx zDxW GrIIq (ewVQR vcQhh (ck)).
cRjw ia (IEKB).

aLp xiq n (l (j6I (SbZ) (gBSH2 (SRfO) (M4NLQ)) mX) (X) (XV4az)) (i) :- ig huO rHbWU (TfM) (Pj).
nbF1i (De).

y2HN (DQ).
iy9d JuS.
? (b Di NNm).